View list of products

--- a/product_list.html
+++ b/product_list.html
@@ -16,9 +16,9 @@
                 </a> 
             </li>
             <li>
-                <a href="product_list.html">
-                    <img class="icons" src="list-icon.png">
-                    <span class="nav-text">View Product List</span>
+                <a href="add_product.html">
+                    <img class="icons" src="add-product-icon.png">
+                    <span class="nav-text">Add New Product</span>
                 </a> 
             </li>
         </ul>
